Added feature partials for ignoring users.

--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,7 @@
                   <div id="usersInRoom">
 
                   </div>
+                  <i style="float: right" class="fa fa-trash-o" ondragover="allowDrop(event)" ondrop="drop(event)"></i>
               </section>
             <!-- Display User Language-->
               <section class="box">
